* Cleanup: Added code to batch mode to close STDIN, should help with backgrounding.
* Cleanup: Made the batch mode header and footer output more concise.

Change List For v0.7.5 (Language: Python / Status: In Progress)
---------------------------------------------------------------
* Cleanup: Changed exception handling for socket timeout to avoid stack trace dump.
* Ability to set and show a global delay for sleep()ing between remote commands.
  Basically this allows one to "slow things down" if desired.

Change List For v0.8.0 (Language: Python / Status: Planning)
---------------------------------------------------------------
- Ability to use a new run command keyword: "parallel".
  This will run the given command in background processes in parallel.
  Output will be spooled to one file per server in a standard output directory.
- Ability to use a "set concurrency X" command to set the concurrency
  for parallel run.  Also XML config directives for global defaults.
- Cleanup: Provide a larger set of example files.  Double-check doc.  Test like crazy.

Idea List For v0.8.1 (Language: Python / Status: Not Started)
---------------------------------------------------------------
- Testing: Completion of a comprehensive batch file test suite.
  (Yes, this has been delayed often.  So far sheer simplicity has been enough.)
- Ability to give a small summary report of which servers appeared to be down
  during a given run.

Idea List For v0.8.5 (Language: Python / Status: Not Started)
---------------------------------------------------------------
- Ability to use regular expressions to match server names.
- Single remote server file to single remote server file copy.
  (i.e. scp awd@www01:/tmp/blah awd@www02:/some/other/path/)
- Single remote server file to multiple remote servers file copy.
  (i.e. scp awd@www01:/tmp/blah awd@www01,www02,www03:/some/other/path/)
- Multiple remote server file to local file copy.  This would have to somehow