@@ -217,6 +217,7 @@ Change List For v0.7.4 (Language: Python / Status: Shipped)
 Change List For v0.7.5 (Language: Python / Status: In Progress)
 ---------------------------------------------------------------
 * Cleanup: Changed exception handling for socket timeout to avoid stack trace dump.
+* Cleanup: Changed readline code to filename-only tab completion.
 * Ability to set and show a global delay for sleep()ing between remote commands.
   Basically this allows one to "slow things down" if desired.
 
